# VidCom2

./: .gitignore  README.md  distribution_qwen.py  index.html  mistral_distribution.py  pyproject.toml  speed_and_memory.py
csrc/: build.py
csrc/tiny_pkg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/models/: qwen25vl.sh  qwen2vl.sh  qwen3vl.sh
llava/model/: llava_arch.py  vidcom2.py
lmms-eval/: pyproject.toml
lmms_eval/models/: __init__.py
mixkv/: mistral_model.py  mixkv_utils.py  monkeypatch.py  qwen2_self.py  qwen_model.py
qwen-omni-utils/: pyproject.toml
scripts/chase_visual_head/: llava.sh  qwen.sh
scripts/eval/: internvl2.sh  mistral.sh  qwen.sh
scripts/others/: speed_and_memory.sh
token_compressor/: vidcom2.py
token_compressor/dycoke/: __init__.py  core.py  temporal_token_merging.py
token_compressor/fastv/: __init__.py  fastv.py
token_compressor/fastvid/: __init__.py  core.py  fastvid_algo.py
token_compressor/holitom/: __init__.py  core.py  holitom.py
token_compressor/illava/: __init__.py  illava.py
token_compressor/ipcv/: __init__.py  ipcv.py
token_compressor/models/: llava.py  qwen2_5_vl.py  qwen2_vl.py  qwen3_vl.py
token_compressor/pooling/: __init__.py  pooling.py
token_compressor/tome/: __init__.py  tome.py
token_compressor/vidcom2/: __init__.py
token_compressor/visionzip/: __init__.py  core.py  visionzip.py
transformers/qwen2_vl/: modeling_qwen2_vl.py
visual_head/: kvquant_error.py  llava_visual_head.py  preprocess_data.py  qwen_visual_head.py
visual_head/head_score/: key_avg_scores.json  (+3 more)
(+62 files in other folders)
